# ceilingfan-esphome

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: advanced-rtl-research.md  architecture.md  hardware.md  inspire-arteconfort-protocol.md  learning-a-remote.md  local-control.md  multi-fan-home.md  multi-fan-protocol-roadmap.md  protocol-catalog.md  voice-assistants.md  workflow.md
docs/adr/: 0001-one-bridge-many-device-profiles.md
docs/protocols/: cjoy-dynamic.md  inspire-nashi.md  inspire-yk8078.md  somfy-rts.md
examples/: example-profile.yaml
firmware/: learning.yaml  onboarding.yaml  secrets.example.yaml
src/ceilingfan_esphome/: __init__.py  analysis.py  bridge_learning.py  cli.py  control.py  esphome.py  models.py  protocols.py  sigmf.py  waveform.py
tests/: test_analysis.py  test_bridge_learning.py  test_cli.py  test_control.py  test_esphome.py  test_models.py  test_protocols.py
