[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ceilingfan-esphome"
version = "0.2.0"
description = "Discover, learn, and deploy local RF ceiling fan bridges."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ceilingfan-esphome contributors" }]
dependencies = [
  # Each esphome release pins one exact aioesphomeapi version; this range must
  # stay wide enough to overlap the esphome releases the firmware extra allows.
  "aioesphomeapi>=45.3,<46",
  "PyYAML>=6.0",
  # aioesphomeapi only pulls zeroconf on some platforms; `control discover`
  # needs it everywhere.
  "zeroconf>=0.147",
]

[project.optional-dependencies]
# firmware: the ESPHome CLI used to flash and deploy bridges.
# research: numpy for the optional RTL-SDR laboratory.
# A control-only install (uv tool install) needs no extras.
firmware = ["esphome>=2026.6.0"]
research = ["numpy>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.15", "numpy>=2.0"]

[project.scripts]
ceilingfan = "ceilingfan_esphome.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ceilingfan_esphome"]

[tool.pytest.ini_options]
testpaths = ["tests"]
